# django-vite-react-tailwind

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  README.md  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/frontend/: index.html  package-lock.json  package.json  vite.config.js
{{cookiecutter.project_slug}}/templates/frontend/: index.html
{{cookiecutter.project_slug}}/users/: admin.py  forms.py  models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
